[tool.poetry]
name = "book-library"
version = "0.1.0"
description = ""
authors = ["M1nt1k <glowingfoxyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
pymongo = "^4.5.0"
motor = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
